Patch provided by jst@netscape.com - Give XPTCVariants that are expected to receive a T_DOMSTRING value an nsAString object to hold the string value. b=193387, r=harishd@netscape.com, sr=heikki@netscape.com